Fix: table row alignment issue

--- a/ui/admin-portal/src/app/shared/components/table/tc-table.component.scss
+++ b/ui/admin-portal/src/app/shared/components/table/tc-table.component.scss
@@ -37,6 +37,10 @@
         }
       }
 
+      tr {
+        vertical-align: middle;
+      }
+
       &.table-hover > tbody > tr:hover {
         @include background-color-soft;
         cursor: pointer;
